@@ -14,26 +14,12 @@
 
 from __future__ import annotations
 
-from importlib import metadata
-from importlib.metadata import PackageNotFoundError
-
 from astrapy import __version__
 
 
 def detect_astrapy_user_agent() -> tuple[str | None, str | None]:
     package_name = __name__.split(".")[0]
     return (package_name, __version__)
-
-
-def detect_ragstack_user_agent() -> tuple[str | None, str | None]:
-    try:
-        ragstack_meta = metadata.metadata("ragstack-ai")
-        if ragstack_meta:
-            ragstack_version = ragstack_meta["version"]
-            return ("ragstack", ragstack_version)
-    except PackageNotFoundError:
-        pass
-    return (None, None)
 
 
 def compose_user_agent_string(
